--- a/box-shadow/box-shadow.html
+++ b/box-shadow/box-shadow.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>BOX-SHADOW</title>
   </head>
   <body>
     <div class="container">
+      <p>The <strong>BOX-SHADOW</strong> property is used to apply a shadow to HTML elements</p>
       <div class="content"></div>
     </div>
   </body>
